--- a/ChattoAdditions/Source/Input/ChatInputBar.xib
+++ b/ChattoAdditions/Source/Input/ChatInputBar.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment version="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,8 +14,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vlk-9J-bj7">
-                    <rect key="frame" x="53" y="10" width="537" height="103"/>
-                    <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="11" y="10" width="579" height="103"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="12"/>
@@ -25,8 +23,8 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fsh-hH-hKG" userLabel="TextView" customClass="ExpandableTextView" customModule="ChattoAdditions" customModuleProvider="target">
-                    <rect key="frame" x="93" y="10" width="447" height="103"/>
-                    <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="51" y="10" width="489" height="103"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <userDefinedRuntimeAttributes>
@@ -35,20 +33,8 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xjl-JH-vmF" userLabel="gif">
-                    <rect key="frame" x="63" y="46.5" width="30" height="30"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="30" id="9Om-iv-ec7"/>
-                        <constraint firstAttribute="height" constant="30" id="Air-id-uIj"/>
-                    </constraints>
-                    <state key="normal" image="gif"/>
-                    <connections>
-                        <action selector="gifTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="usa-Km-R1o"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hE9-hU-Ci1">
-                    <rect key="frame" x="539" y="44.5" width="34" height="34"/>
+                    <rect key="frame" x="546" y="44.5" width="34" height="34"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="9km-tD-ZFh"/>
@@ -74,20 +60,18 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fsh-hH-hKG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="93" id="0hb-TC-77u"/>
                 <constraint firstAttribute="trailing" secondItem="Vlk-9J-bj7" secondAttribute="trailing" constant="10" id="1Pv-yF-DiP"/>
                 <constraint firstItem="TZe-8e-tnS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="11" id="2M4-FI-jKf"/>
                 <constraint firstItem="Vlk-9J-bj7" firstAttribute="leading" secondItem="fsh-hH-hKG" secondAttribute="leading" constant="-40" id="2eX-4F-TOI"/>
-                <constraint firstItem="Xjl-JH-vmF" firstAttribute="centerY" secondItem="fsh-hH-hKG" secondAttribute="centerY" id="5OB-nP-zV8"/>
+                <constraint firstItem="fsh-hH-hKG" firstAttribute="leading" secondItem="TZe-8e-tnS" secondAttribute="trailing" constant="10" id="5Os-CE-qvJ"/>
                 <constraint firstItem="TZe-8e-tnS" firstAttribute="centerY" secondItem="fsh-hH-hKG" secondAttribute="centerY" id="A82-lw-vXp"/>
                 <constraint firstItem="Vlk-9J-bj7" firstAttribute="top" secondItem="fsh-hH-hKG" secondAttribute="top" id="BUP-VF-DXC"/>
                 <constraint firstItem="Vlk-9J-bj7" firstAttribute="centerY" secondItem="fsh-hH-hKG" secondAttribute="centerY" id="HNh-fr-DOP"/>
-                <constraint firstItem="hE9-hU-Ci1" firstAttribute="trailing" secondItem="Vlk-9J-bj7" secondAttribute="trailing" constant="-17" id="IW9-FN-GlL"/>
+                <constraint firstItem="hE9-hU-Ci1" firstAttribute="trailing" secondItem="Vlk-9J-bj7" secondAttribute="trailing" constant="-10" id="IW9-FN-GlL"/>
                 <constraint firstAttribute="bottom" secondItem="fsh-hH-hKG" secondAttribute="bottom" constant="10" id="KJo-FS-aK4"/>
                 <constraint firstItem="hE9-hU-Ci1" firstAttribute="centerY" secondItem="fsh-hH-hKG" secondAttribute="centerY" id="NJt-MV-FvV"/>
                 <constraint firstItem="Vlk-9J-bj7" firstAttribute="bottom" secondItem="fsh-hH-hKG" secondAttribute="bottom" id="YcM-nm-9fu"/>
                 <constraint firstItem="fsh-hH-hKG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="ZsI-iu-9nR"/>
-                <constraint firstItem="Xjl-JH-vmF" firstAttribute="leading" secondItem="Vlk-9J-bj7" secondAttribute="leading" constant="10" id="sgF-iW-TPI"/>
                 <constraint firstAttribute="trailing" secondItem="fsh-hH-hKG" secondAttribute="trailing" constant="60" id="vVY-rg-Rwc"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -101,8 +85,7 @@
         </view>
     </objects>
     <resources>
-        <image name="attach" width="56" height="56"/>
-        <image name="gif" width="56" height="56"/>
-        <image name="send" width="56" height="56"/>
+        <image name="attach" width="15" height="15"/>
+        <image name="send" width="24" height="24"/>
     </resources>
 </document>
